Started about.html

--- a/dice.html
+++ b/dice.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <title>Dungeons and Dorks</title>
 
-
-<!-- Title Background <img src="" alt=""> -->
 <nav>
 	<a href="index.html"><img src="_img/73eJ2f-LogoMakr-120x109.png" title="Logo" width="50px"></a>
 
@@ -13,4 +11,4 @@
 	<a href="dice.html">DICE</a>
 </nav>
 
-<h1>Dungeons and Dorks</h1>
+<h1>Dice Roller</h1>
