Fixed Image Links

--- a/about.html
+++ b/about.html
@@ -3412,12 +3412,12 @@
 			margin: 0 !important;
 		}
 	</style>
-	<link rel="icon" href="_img/73eJ2f-LogoMakr-150x150.png"
+	<link rel="icon" href="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr-150x150.png"
 		sizes="32x32">
-	<link rel="icon" href="_img/73eJ2f-LogoMakr.png" sizes="192x192">
-	<link rel="apple-touch-icon" href="_img/73eJ2f-LogoMakr.png">
+	<link rel="icon" href="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr.png" sizes="192x192">
+	<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr.png">
 	<meta name="msapplication-TileImage"
-		content="_img/73eJ2f-LogoMakr.png">
+		content="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr.png">
 	<script src="https://dungeonsanddorks.ca/wp-includes/js/wp-emoji-release.min.js?ver=6.3.2" defer=""></script>
 	<style id="cky-style">
 		.cky-overlay {
@@ -4786,12 +4786,12 @@
 											<span class="site-logo-img"><a href="index.html"
 													class="custom-logo-link transparent-custom-logo" rel="home" itemprop="url"
 													aria-label="dungeons and dragons blog"><img width="120" height="109"
-														src="_img/73eJ2f-LogoMakr-120x109.png"
+														src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr-120x109.png"
 														class="custom-logo" alt="" decoding="async" srcset=""
 														sizes="(max-width: 120px) 100vw, 120px"></a><a href="index.html"
 													class="custom-logo-link ast-transparent-mobile-logo" rel="home" itemprop="url"><img
 														width="120" height="109"
-														src="_img/73eJ2f-LogoMakr-120x109.png"
+														src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr-120x109.png"
 														class="custom-logo" alt="" decoding="async" srcset=""
 														sizes="(max-width: 120px) 100vw, 120px"></a></span>
 										</div>
@@ -4870,12 +4870,12 @@
 										<span class="site-logo-img"><a href="index.html"
 												class="custom-logo-link transparent-custom-logo" rel="home" itemprop="url"
 												aria-label="dungeons and dragons blog"><img width="120" height="109"
-													src="_img/73eJ2f-LogoMakr-120x109.png"
+													src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr-120x109.png"
 													class="custom-logo" alt="" decoding="async" srcset=""
 													sizes="(max-width: 120px) 100vw, 120px"></a><a href="index.html"
 												class="custom-logo-link ast-transparent-mobile-logo" rel="home" itemprop="url"><img width="120"
 													height="109"
-													src="_img/73eJ2f-LogoMakr-120x109.png"
+													src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr-120x109.png"
 													class="custom-logo" alt="" decoding="async" srcset=""
 													sizes="(max-width: 120px) 100vw, 120px"></a></span>
 									</div>
@@ -5244,9 +5244,9 @@
 																	display: inline-block
 																}
 															</style> <img decoding="async" width="427" height="640"
-																src="_img/jordan-7189712_640.jpg"
+																src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/jordan-7189712_640.jpg"
 																class="attachment-full size-full wp-image-696" alt=""
-																srcset="_img/jordan-7189712_640.jpg 427w, _img/jordan-7189712_640-200x300.jpg 200w"
+																srcset="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/jordan-7189712_640.jpg 427w, https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/jordan-7189712_640-200x300.jpg 200w"
 																sizes="(max-width: 427px) 100vw, 427px">
 														</div>
 													</div>
@@ -5313,7 +5313,7 @@
 								<div class="ast-header-html inner-link-style-">
 									<div class="ast-builder-html-element">
 										<p><a href="index.html"><img class="aligncenter wp-image-587"
-													src="_img/73eJ2f-LogoMakr.png" alt=""
+													src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img/73eJ2f-LogoMakr.png" alt=""
 													width="50" height="45"></a></p>
 									</div>
 								</div>
