--- a/dice.html
+++ b/dice.html
@@ -3249,12 +3249,12 @@
 			margin: 0 !important;
 		}
 	</style>
-	<link rel="icon" href="_img/73eJ2f-LogoMakr-150x150.png"
+	<link rel="icon" href="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr-150x150.png"
 		sizes="32x32">
-	<link rel="icon" href="_img/73eJ2f-LogoMakr.png" sizes="192x192">
-	<link rel="apple-touch-icon" href="_img/73eJ2f-LogoMakr.png">
+	<link rel="icon" href="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr.png" sizes="192x192">
+	<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr.png">
 	<meta name="msapplication-TileImage"
-		content="_img/73eJ2f-LogoMakr.png">
+		content="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr.png">
 	<script src="js/wp-emoji-release.min.js" defer=""></script>
 	<style id="cky-style">
 		.cky-overlay {
@@ -4620,7 +4620,7 @@
 											itemscope="itemscope">
 											<span class="site-logo-img"><a href="index.html" class="custom-logo-link"
 													rel="home"><img width="250" height="227"
-														src="_img/73eJ2f-LogoMakr.png"
+														src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr.png"
 														class="custom-logo" alt="dungeons and dragons blog" decoding="async" fetchpriority="high"
 														srcset="" sizes="(max-width: 250px) 100vw, 250px"></a></span>
 										</div>
@@ -4698,7 +4698,7 @@
 										itemscope="itemscope">
 										<span class="site-logo-img"><a href="index.html" class="custom-logo-link"
 												rel="home"><img width="250" height="227"
-													src="_img/73eJ2f-LogoMakr.png"
+													src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr.png"
 													class="custom-logo" alt="dungeons and dragons blog" decoding="async" srcset=""
 													sizes="(max-width: 250px) 100vw, 250px"></a></span>
 									</div>
@@ -4890,7 +4890,7 @@
 								<div class="ast-header-html inner-link-style-">
 									<div class="ast-builder-html-element">
 										<p><a href="index.html"><img class="aligncenter wp-image-587"
-													src="_img/73eJ2f-LogoMakr.png" alt=""
+													src="https://raw.githubusercontent.com/asdfgn2399/Dungeons-and-Dorks/main/_img73eJ2f-LogoMakr.png" alt=""
 													width="50" height="45"></a></p>
 									</div>
 								</div>
