Removed Search Bar

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4556,7 +4556,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
+									<!-- TODO: Search <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
 										data-section="section-header-search">
 										<div class="ast-search-menu-icon slide-search">
 											<form role="search" method="get" class="search-form" action="index.html">
@@ -4572,7 +4572,7 @@
 													<span class="ast-icon icon-search"></span> </a>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
