--- a/dice.html
+++ b/dice.html
@@ -4661,7 +4661,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
+									<!-- TODO: Search <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
 										data-section="section-header-search">
 										<div class="ast-search-menu-icon slide-search">
 											<form role="search" method="get" class="search-form" action="index.html">
@@ -4677,7 +4677,7 @@
 													<span class="ast-icon icon-search"></span> </a>
 											</div>
 										</div>
-									</div>
+									</div>-->
 								</div>
 							</div>
 						</div>
