--- a/dice.html
+++ b/dice.html
@@ -4903,7 +4903,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
+									<!-- <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
 										data-section="section-header-search">
 										<div class="ast-search-menu-icon slide-search">
 											<form role="search" method="get" class="search-form" action="https://asdfgn2399.github.io/Dungeons-and-Dorks/">
@@ -4919,7 +4919,7 @@
 													<span class="ast-icon icon-search"></span> </a>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
