Updated About Page

--- a/dice-roller/index.html
+++ b/dice-roller/index.html
@@ -4903,7 +4903,7 @@
 											</div>
 										</div>
 									</div>
-									<!-- <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
+									<!-- TODO: Search <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
 										data-section="section-header-search">
 										<div class="ast-search-menu-icon slide-search">
 											<form role="search" method="get" class="search-form" action="https://asdfgn2399.github.io/Dungeons-and-Dorks/">
