--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
 	<!-- All in One SEO -->
 
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
-	<!-- <link rel="alternate" type="application/rss+xml" title="dungeons and dragons blog » Feed"
+	<!-- TODO <link rel="alternate" type="application/rss+xml" title="dungeons and dragons blog » Feed"
 		href="https://dungeonsanddorks.ca/feed/">
 	<link rel="alternate" type="application/rss+xml" title="dungeons and dragons blog » Comments Feed"
 		href="https://dungeonsanddorks.ca/comments/feed/"> -->
