--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -5073,7 +5073,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
+									<!-- TODO: Search <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-search"
 										data-section="section-header-search">
 										<div class="ast-search-menu-icon slide-search">
 											<form role="search" method="get" class="search-form" action="https://dungeonsanddorks.github.io/">
@@ -5089,7 +5089,7 @@
 													<span class="ast-icon icon-search"></span> </a>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
