--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -5454,9 +5454,7 @@
 														}
 													</style>
 
-													<div id="uc_post_list_elementor_919c7ef_empty_message" class="ue-no-posts-found"
-														style="display:none">No posts found</div>
-
+													<div id="blog-2-blog-post-list"></div>
 
 													<!-- end Post List -->
 												</div>
