--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -5553,7 +5553,7 @@
 			opacity: 0.6;
 		}
 	</style>
-	<script src="/blog/blog.js"></script>
+	<script src="https://dungeonsanddorks.github.io/blog/blog.js"></script>
 	<script id="astra-theme-js-js-extra">
 		var astra = { "break_point": "921", "isRtl": "", "is_scroll_to_id": "", "is_scroll_to_top": "", "is_header_footer_builder_active": "1" };
 	</script>
