Fixed Site to use Index

--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -6736,8 +6736,9 @@
                             >
                               <path
                                 d="M5.293 6.707l5.293 5.293-5.293 5.293c-0.391 0.391-0.391 1.024 0 1.414s1.024 0.391 1.414 0l5.293-5.293 5.293 5.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-5.293-5.293 5.293-5.293c0.391-0.391 0.391-1.024 0-1.414s-1.024-0.391-1.414 0l-5.293 5.293-5.293-5.293c-0.391-0.391-1.024-0.391-1.414 0s-0.391 1.024 0 1.414z"
-                              ></path></svg
-                          ></span>
+                              ></path>
+                            </svg>
+                          </span>
                         </span>
                       </button>
                     </div>
@@ -7327,7 +7328,7 @@
         opacity: 0.6;
       }
     </style>
-    <script src="https://dungeonsanddorks.github.io/blog/blog.js"></script>
+    <script src="/blog/blog.js"></script>
     <script id="astra-theme-js-js-extra">
       var astra = {
         break_point: "921",
