Testing Post List Navigation

--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -7169,6 +7169,17 @@
                             ></div>
 
                             <!-- end Post List -->
+
+                            <div id="post_list_navigation" style="
+                              height: 50px;
+                              text-align: center;
+                              padding: 15px;
+                              font-size: 20px;
+                            ">
+                              <span class="ast-left-arrow">←</span>
+                              ... 2 3 4 5 6 7 8 ...
+                              <span class="ast-right-arrow">→</span>
+                            </div>
                           </div>
                         </div>
                       </div>
